--- a/10-simple-rules-for-teaching-r-for-data-science.Rmd
+++ b/10-simple-rules-for-teaching-r-for-data-science.Rmd
@@ -1,9 +1,8 @@
 ---
 title: "10 simple rules for teaching R for Data Science"  
 author: 
-  - "Tiffany Timbers (UBC)"
-  - "2022-09-17"
-date: 'bit.ly/timbers-cascadia-r-conf-2022'
+  - "Liangliang Zhuang"
+date: "2022-09-27"
 output:
   xaringan::moon_reader:
     lib_dir: libs
@@ -30,7 +29,7 @@ knitr::opts_chunk$set(message = FALSE,
 library(xaringanthemer)
 style_duo_accent(
   primary_color = "#9F999C",
-  secondary_color = "#FFE5F3",
+  secondary_color = "#8ACEF6",
   inverse_header_color = "#8F8C8E",
   link_color = "deeppink",
   title_slide_text_color = "#3d3d3d",
@@ -105,31 +104,6 @@ knitr::include_graphics("img/nachos-to-cheesecake-1.png")
 ```
 ]
 
-Source: 
-[Chapter 1 of *Data Science: A First Introduction*](https://datasciencebook.ca/intro.html) 
-by Tiffany Timbers, Trevor Campbell & Melissa Lee
-
----
-
-<!---Teaching the tidyverse can facilitate this:--->
-
-.pull-left[
-<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">When you start writing a loop then turn it into dplyr <a href="https://twitter.com/hashtag/rstats?src=hash&amp;ref_src=twsrc%5Etfw">#rstats</a>; David Robinson (@drob) <a href="https://twitter.com/drob/status/701790246111825925">Feb 22, 2016</a></blockquote>
-<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-]
-
-.pull-right[
-```{r jenny-teach-tidyverse}
-knitr::include_graphics("img/jenny-teach-tidyverse.png")
-```
-
-#### Explore more:
-David Robinson:
-- [Teach the tidyverse to beginners](http://varianceexplained.org/r/teach-tidyverse/)
-blog post
-- [Announcing "Introduction to the Tidyverse", my new DataCamp course](http://varianceexplained.org/r/intro-tidyverse/) blog post
-- [Introduction to the Tidyverse](https://www.datacamp.com/courses/introduction-to-the-tidyverse) online course
-]
 ---
 
 ### 2. Use participatory live coding!
@@ -138,28 +112,16 @@ blog post
 
 **Why?** Demonstrates process and makes you appear human!
 
-***
+<!-- *** -->
 
 ```{r lex-live-coding, out.width="70%", fig.retina=2, fig.align="left"}
 knitr::include_graphics("img/lex-live-coding.png")
 ```
 
-Source: [A video introduction to live coding part 2](https://www.youtube.com/watch?v=SkPmwe_WjeY&t=111s) by Lex Nederbragt
 
 ---
 
-```{r carpentries, out.width="70%", fig.retina=2}
-knitr::include_graphics("img/carpentries.png")
-```
-
-#### Explore more:
-- [Ten quick tips for teaching with participatory
-live coding](https://doi.org/10.1371/journal.pcbi.1008090) by Lex Nederbragt, Rayna Harris, Alison Hill & Greg Wilson
-- [Live coding section of Teaching Tech Together](https://teachtogether.tech/en/index.html#s:performance-live) by Greg Wilson
-- Example live coding videos by Lex Nederbragt ([bad example](https://www.youtube.com/watch?v=bXxBeNkKmJE&t=5s), [good example](https://www.youtube.com/watch?v=SkPmwe_WjeY&t=111s))
----
-
-### 3. Give tons and tons of practice!
+### 3. Give practice!
 
 **What?** Give the learners many many problems to solve.
 
@@ -200,7 +162,7 @@ knitr::include_graphics("img/swirl-demo.png")
 
 ---
 
-### 4. Give tons and tons of timely feedback!
+### 4. Give timely feedback!
 
 **What?** Automated software tests to give hints and feedback.
 
@@ -208,15 +170,9 @@ knitr::include_graphics("img/swirl-demo.png")
 
 ***
 
-```{r tests-as-feedback, out.width="70%", fig.retina=2, fig.align="left"}
-knitr::include_graphics("img/tests-as-feedback.png")
-```
-
----
-
 .pull-left[
-```{r teaching-tech-together, out.width="75%", fig.retina=2}
-knitr::include_graphics("img/teaching-tech-together.jpeg")
+```{r tests-as-feedback, out.width="100%", fig.retina=2, fig.align="center"}
+knitr::include_graphics("img/tests-as-feedback.png")
 ```
 ]
 
@@ -244,37 +200,8 @@ A small subset of the `palmerpengiuns` data set for teaching K-means clustering:
 knitr::include_graphics("img/10-toy-example-clustering-1.png")
 ```
 
-Source: [Clustering chapter of *Data Science: A First Introduction*](https://datasciencebook.ca/clustering.html) by Tiffany Timbers, Trevor Campbell & Melissa Lee
+<!-- Source: [Clustering chapter of *Data Science: A First Introduction*](https://datasciencebook.ca/clustering.html) by Tiffany Timbers, Trevor Campbell & Melissa Lee -->
 
----
-
-.pull-left[
-
-```{r jenny-dplyr-join-tweet, out.width="100%", fig.retina=2}
-knitr::include_graphics("img/jenny-dplyr-join-tweet.png")
-```
-
-.small[
-```r
-left_join(superheroes, publishers)
-```
-]
-
-We basically get `x = superheroes` back, but with the addition of variable `yr_founded`, which is unique to `y = publishers`. Hellboy, whose publisher does not appear in `y = publishers`, has an `NA` for `yr_founded`.
-
-```{r jenny-bryan-left-join, out.width="100%", fig.retina=2}
-knitr::include_graphics("img/jenny-bryan-left-join.png")
-```
-]
-
-.pull-right[
-#### Explore more:
-- [Jenny Bryan's join cheat sheet](https://stat545.com/join-cheatsheet.html)
-- [`dpylr::tibble`](https://tibble.tidyverse.org/reference/tibble.html) or [`dpylr::tribble`](https://tibble.tidyverse.org/reference/tribble.html) R functions
-- [`sample`](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/sample) or [`dpylr::sample_n`](https://dplyr.tidyverse.org/reference/sample_n.html) R functions
-- [charlatan](https://docs.ropensci.org/charlatan/) R package for creating fake data
-- [drawdata.xyz](https://drawdata.xyz/) app to draw a data set and download it
-]
 ---
 
 ## 6. Use real and rich, but accessible, data sets
@@ -285,11 +212,10 @@ knitr::include_graphics("img/jenny-bryan-left-join.png")
 
 ***
 
-```{r README-example-plot-from-data-1, out.width="70%", fig.retina=2, fig.align="left"}
+```{r README-example-plot-from-data-1, out.width="70%", fig.retina=2, fig.align="center"}
 knitr::include_graphics("img/README-example-plot-from-data-1.png")
 ```
 
-Source: [`canlang`](https://ttimbers.github.io/canlang/) R package
 ---
 .pull-left[
 Jenny Bryan's [`gapminder`](https://github.com/jennybc/gapminder) R data package:
@@ -352,54 +278,20 @@ so that the role and rationale for unquoted column names is clear:
 
 ---
 
-.pull-left[
-```{r why-assignment-1, out.width="100%", fig.retina=2}
-knitr::include_graphics("img/why-assignment-1.png")
-```
-
-(Or why `<-` instead of `=`?)
-
-```{r why-assignment-2, out.width="100%", fig.retina=2}
-knitr::include_graphics("img/why-assignment-2.png")
-```
-
-Source: https://colinfay.me/r-assignment/
-]
-
-.pull-right[
-
-#### Explore more:
-- [History and Overview of R chapter](https://bookdown.org/rdpeng/rprogdatascience/history-and-overview-of-r.html) from R Programming for Data Science by Roger Peng
-- [Introduction to *R for Data Engineers*](https://tidynomicon.github.io/tidynomicon/) by Greg Wilson
-- [Wikipedia article on R](https://en.wikipedia.org/wiki/R_(programming_language)
-]
----
-
 ## 8. Build a safe, inclusive and welcoming community
 
 **What?** Put in place scaffolding and guidelines to facilitate a safe learning environment.
 
 **Why?** Students cannot effectively learn if they do not feel safe.
 
-***
 
-```{r dsci-100-coc, out.width="75%", fig.retina=2, fig.align="left"}
-knitr::include_graphics("img/dsci-100-coc.png")
+```{r dsci-100-coc, out.width="65%", fig.retina=2, fig.align="center"}
+knitr::include_graphics("img/Bayes.png")
 ```
 
-Source: https://ubc-dsci.github.io/dsci-100-student/CODE_OF_CONDUCT.html
+Source: https://avehtari.github.io/BDA_course_Aalto/index.html
 ---
 
-```{r carpentries-coc, out.width="100%", fig.retina=2}
-knitr::include_graphics("img/carpentries-coc.png")
-```
-
-Source: https://docs.carpentries.org/topic_folders/policies/code-of-conduct.html
-
-#### Explore more:
-- [Ally Skills workshop](https://frameshiftconsulting.com/ally-skills-workshop/)
-
----
 
 ### 9. Use checklists to focus and facilitate peer learning
 
@@ -496,11 +388,11 @@ Source: https://stat545.stat.ubc.ca/
 
 --
 
-3. Give tons and tons of practice
+3. Give practice
 
 --
 
-4. Give tons and tons of feedback
+4. Give feedback
 
 --
 
@@ -529,38 +421,7 @@ Source: https://stat545.stat.ubc.ca/
 ---
 
 
-### Acknowledgements
-
-
-- UBC Master of Data Science students
-
-- UBC DSCI 100 and 310 students
-
-- [UBC Master of Data Science teaching team](https://ubc-mds.github.io/team/) and the DSCI 100 teaching team
-
-- [The Carpentries](https://carpentries.org/)
-
-- [Greg Wilson](https://third-bit.com/), Software Engineer, Deep Genomics
-
-- [Jenny Bryan](https://jennybryan.org/), Software Engineer, Posit
-
-- [David Robinson](http://varianceexplained.org/), Director of Data Scientist, Heap
-
-- [Roger Peng](https://rdpeng.org/), Professor of Statistics and Data Sciences , University of Texas, Austin
-
-- [Lex Nederbragt](https://lexnederbragt.com/), Senior Lecturer, University of Oslo
-
-- [Sean Kross](https://seankross.com/), Data Staff Scientist, Fred Hutch Data Science Lab
-
-- [Colin Fay](https://colinfay.me/), Data Scientist & R Hacker, ThinkR
-
-- And many more educators in the R community!!! There are too many to list!
-
----
-
-
 class: inverse, center, middle
 
 ## 10 simple rules for teaching R for Data Science
 
-#### talk slides: *[https://bit.ly/timbers-cascadia-r-conf-2022](https://bit.ly/timbers-cascadia-r-conf-2022)*
